--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
 	<body>
 
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+ 		 	var js, fjs = d.getElementsByTagName(s)[0];
+  			if (d.getElementById(id)) return;
+  			js = d.createElement(s); js.id = id;
+  			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+
 		<div class="container">
 			<!-- START HERE --> 
 			<h1>Tina Belcher</h1>
@@ -23,6 +32,8 @@
 			<p><a href= "http://www.mydamnchannel.com/slacktory/slacktory/bobsburgerssupercutalloftinasmoans_9441" target="_blank">Tina likes to moan, a LOT.</a></p>
 
 			<iframe width="500" height="281" src="https://www.youtube.com/embed/bK4GgcXIHh8" frameborder="0" allowfullscreen></iframe>
+
+			<div class="fb-like" data-href="http://tina.madeleinedavis.com" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 
 			<!-- END HERE --> 
 		</div><!-- .container --> 
