--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 			<div class="fb-like" data-href="http://tina.madeleinedavis.com" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 
-			<div class="fb-comments" data-href="http://tina.madeleinedavis.com" data-numposts="3"></div>
+			<div class="fb-comments" data-href="http://tina.madeleinedavis.com" data-width="300" data-numposts="3"></div>
 
 			<!-- END HERE --> 
 		</div><!-- .container --> 
